Issue #1374, commented out a vertical align on title that seemed to push numbering too low

--- a/css/ccap-basic-math.css
+++ b/css/ccap-basic-math.css
@@ -2674,7 +2674,6 @@ div.colophon.end-of-book-solutions .chapter-area div.solution > div.title {
   display: inline;
   word-spacing: normal;
   text-align: left;
-  vertical-align: text-top;
 }
 div.colophon.end-of-book-solutions .chapter-area div.solution > div.title::after {
   content: ". ";
@@ -2685,7 +2684,6 @@ div.colophon.end-of-book-solutions .chapter-area div.solution > div.title::after
 div.colophon.end-of-book-solutions .chapter-area div.solution > div.body {
   margin-right: .65em;
   word-spacing: normal;
-  vertical-align: middle;
   display: inline;
 }
 div.colophon.end-of-book-solutions .chapter-area div.solution > div.body div,
