--- a/css/ccap-calculus.css
+++ b/css/ccap-calculus.css
@@ -2704,7 +2704,6 @@ div.colophon.end-of-book-solutions .chapter-area div.solution > div.title {
   display: inline;
   word-spacing: normal;
   text-align: left;
-  vertical-align: text-top;
 }
 div.colophon.end-of-book-solutions .chapter-area div.solution > div.title::after {
   content: ". ";
@@ -2715,7 +2714,6 @@ div.colophon.end-of-book-solutions .chapter-area div.solution > div.title::after
 div.colophon.end-of-book-solutions .chapter-area div.solution > div.body {
   margin-right: .65em;
   word-spacing: normal;
-  vertical-align: middle;
   display: inline;
 }
 div.colophon.end-of-book-solutions .chapter-area div.solution > div.body div,
