--- a/css/refactor/themes/math-slots.less
+++ b/css/refactor/themes/math-slots.less
@@ -950,7 +950,7 @@
         display: inline;
         word-spacing: normal;
         text-align: left;
-        vertical-align: text-top;
+        //vertical-align: middle;
         // Solution in Answer Key needs to have period after number.
         &::after {
           content: ". ";
@@ -974,7 +974,7 @@
       .style(@kind, book-end) {
         margin-right: .65em;
         word-spacing: normal;
-        vertical-align: middle;
+        //vertical-align: middle;
         display: inline;
         // will need to change - include in .body mixin for now
         > a.target-figure {
